--- a/index.html
+++ b/index.html
@@ -15,34 +15,10 @@
           <h3>Kyria</h3>
           <p></p>
           <p>
-            Llevamos conociéndonos mucho tiempo, y la verdad, nunca me imaginé
-            que llegaríamos a ser algo más que solo amigos. Tal vez algún día te
-            rías de esta carta, y espero que ese día nunca llegue, porque la
-            verdad no soy de hacer cartas, pero quiero hacerte esta a ti. Te la
-            escribo con amor desde mi teclado y mi corazón. Cuando todo esto se
-            dio en nuestro viaje a la playa, me fui enamorando de ti. Con cada
-            día que pasábamos juntos, solo pensaba en que no quería que el viaje
-            se acabe nunca porque pensé que todo terminaría, pero no fue así.
-            Seguimos viajando juntos, y yo, que pensaba que nunca me gustaría
-            viajar tanto, descubrí que contigo me encanta. Me encanta estar
-            contigo. Cuando me hiciste ese riquísimo ají de pollo, supe que
-            estaba perdidamente enamorado de ti, y que, si quiero estar con
-            alguien, es contigo. Quiero pasar por tantas cosas juntos. Quiero
-            seguir abrazándote, seguir besándote, seguir amándote y que me ames
-            como yo te amo a ti. Quiero de verdad tener algo lindo contigo y que
-            no se acabe nunca. Sé que haremos las cosas bien. Yo quiero hacer
-            las cosas bien. De verdad, no quiero a nadie que no seas tú. Quiero
-            que algún día podamos contarles a nuestras wawas cómo nos conocimos,
-            cómo al principio me odiabas sin siquiera conocerme, y también
-            hablarles de tus pinches exs jsjs. Quiero contarles cómo los
-            sentimientos que tenía por ti se fueron transformando en amor en tan
-            solo un viaje a la playa. Quiero seguir viviendo más momentos a tu
-            lado y te prometo que lo que siento por ti no va a cambiar nunca.
-            Siempre voy a estar a tu lado, en las buenas y en las malas. 
-            <p>Quiero ser tu novio.</p>
+La verdad si queria todo contigo :')</p>
           </p>
-          <p>Con amor,</p>
-          <p>Felipe</p>
+          
+
         </div>
       </div>
       <button class="open-btn" onclick="openCard()">
